# auto-school-system

./: README.md  example.doap  meson.build  Захват системы из 2025-05-18 22:59:58.syscap
data/: autoschoolsystem.gschema.xml  gresource.xml  meson.build
data/styles/: style.css
data/ui/: main-window.blp  meson.build
data/ui/pages/: login-page.blp  main-page.blp  meson.build
data/ui/pages/admin/: add-user-page.blp  all-users-page.blp  meson.build
data/ui/widgets/: administrator-page-buttons.blp  instructor-page-buttons.blp  meson.build  named-label.blp  student-page-buttons.blp  teacher-page-buttons.blp  text-field.blp  user-card.blp
data/ui/widgets/dialogs/: add-user-dialog.blp  meson.build
src/: app.vala  meson.build
src/data/: meson.build  user-repository.vala
src/models/: meson.build  user-model.vala
src/services/: meson.build  user-manager.vala
src/services/network/: array-serializable.vala  meson.build  network-error.vala  network.vala  request.vala  sse-network.vala
src/ui/: main-window.vala  meson.build
src/ui/pages/: login-page.vala  main-page.vala  meson.build
src/ui/pages/admin/: add-user-page.vala  all-users-page.vala  meson.build
src/ui/widgets/: administrator-page-buttons.vala  async-image.vala  instructor-page-buttons.vala  meson.build  named-label.vala  student-page-buttons.vala  teacher-page-buttons.vala  text-field.vala  user-card.vala
src/ui/widgets/dialogs/: add-user-dialog.vala  meson.build
